# fragment

./: .gitattributes  .gitignore  BRIEF.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  curl.h  find_vcvars.bat  hook.h  main.c
.github/workflows/: ci.yml  release.yml
common/: curl_abi.h  version.h
common/arch/aarch64/: reloc.h
common/arch/armv7/: README.md  reloc.h
common/arch/i386/: README.md  decode.h
common/arch/x86/: decode.h
common/arch/x86_64/: decode.h
linux/: CMakeLists.txt  CMakePresets.json  Makefile  build.sh  config.h  curl.h  hook.h  log.h  main.c  util.h
linux/test/: build_test.sh  decodetest.c  elf.py  hooktest.c  host.c  host_bench.c  host_mock.c  host_plugin.c  host_stress.c  host_urlapi.c  mockcurl.c  plugin.c  run.py  sigcheck.py  verify_sigs.py
linux/test/curl/: README.md
linux/tools/: fragment.c
macos/: README.md
test/: build_test.bat  host_bench.c  host_plugin.c  pe.py  run.py  verify_sigs.py
test/curl/: README.md
tools/: fragment.c
windows/: CMakeLists.txt  config.h  curl.h  hook.h  log.h  main.c  util.h  winhttp.h  wow64.h
windows/test/: build_test.bat  hooktest.c  host.c  host_mock.c  host_stress.c  host_urlapi.c  host_winhttp.c  inject.c  mockcurl.c  pe32test.c  plugin.c  run_winhttp.py  sigcheck.py  victim.c
windows/tools/: fragment.c
